--- a/index.html
+++ b/index.html
@@ -1,69 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HNG13 App</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hi from HNG13</title>
   <style>
-    body {
-      font-family: "Poppins", sans-serif;
-      background: linear-gradient(135deg, #007cf0, #00dfd8);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      color: #fff;
-      overflow: hidden;
-    }
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
 
-    .container {
-      text-align: center;
-      background: rgba(255, 255, 255, 0.1);
-      padding: 3rem 4rem;
-      border-radius: 2rem;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
-      backdrop-filter: blur(10px);
-      animation: fadeIn 2s ease-in-out;
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: radial-gradient(circle at top, #0f2027, #203a43, #2c5364);
+      color: #ffffff;
+      font-family: 'Poppins', sans-serif;
+      overflow: hidden;
     }
 
     h1 {
       font-size: 3rem;
-      margin-bottom: 0.5rem;
+      font-weight: 700;
+      text-align: center;
+      text-shadow: 0 0 10px #00fff2, 0 0 20px #00fff2, 0 0 40px #00fff2;
+      animation: glow 3s infinite alternate;
     }
 
-    p {
-      font-size: 1.2rem;
-      letter-spacing: 0.5px;
-      opacity: 0.9;
-    }
-
-    @keyframes fadeIn {
+    @keyframes glow {
       from {
-        opacity: 0;
-        transform: translateY(20px);
+        text-shadow: 0 0 10px #00fff2, 0 0 20px #00fff2, 0 0 40px #00fff2;
       }
       to {
-        opacity: 1;
-        transform: translateY(0);
+        text-shadow: 0 0 20px #00fff2, 0 0 40px #00fff2, 0 0 80px #00fff2;
       }
     }
 
     footer {
       position: absolute;
-      bottom: 1rem;
-      width: 100%;
-      text-align: center;
+      bottom: 20px;
+      color: #aaa;
       font-size: 0.9rem;
-      opacity: 0.7;
+      text-align: center;
+      width: 100%;
+    }
+
+    footer span {
+      color: #00fff2;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Hi from HNGi13 👋</h1>
-    <p>Welcome to the HNG Internship challenge — your container is live!</p>
-  </div>
-  <footer>© 2025 HNG13 — Crafted with 💙 By Padre-X</footer>
+  <h1>Hi from HNGi13 👋</h1>
+  <footer>
+    <p>Crafted By Padre-X for <span>HNG Internship</span></p>
+  </footer>
 </body>
 </html>
